--- a/index.html
+++ b/index.html
@@ -23,5 +23,5 @@
 	<li style="line-height: 100%;"><span style="font-family: Droid Sans, sans-serif;">Adresse, </span></li>
 	<li style="line-height: 100%;"><span style="font-family: Droid Sans, sans-serif;">Code postal, </span></li>
 	<li style="line-height: 100%;"><span style="font-family: Droid Sans, sans-serif;">Bureau distributeur, </span></li>
-	<li style="line-height: 100%;"><span style="font-family: Droid Sans, sans-serif;">Coordonnées GPS de la mairie : Longitude, Latitude.</span></li>
+	<li style="line-height: 100%;"><span style="font-family: Droid Sans, sans-serif;">Coordonnées GPS de la mairie (Longitude, Latitude).</span></li>
 </ul>
