--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <p style="line-height: 100%; margin-bottom: 0cm;"><span style="font-family: Droid Sans, sans-serif;">Des fichiers Excel prêts à l'emploi, proposés par <a href="http://www.planete-excel.fr/">www.planete-excel.fr</a>, le site dédié à Excel :</span></p>
 
 <h2 style="line-height: 100%; margin-bottom: 0cm;"><span style="font-family: Droid Sans, sans-serif;">Liste des communes de France 2023, avec coordonnées de géolocalisation </span></h2>
+<a href="https://github.com/planete-excel/fichiers-excel">Téléchargement sur Github</a>
 <p style="line-height: 100%; margin-bottom: 0cm;"><span style="font-family: Droid Sans, sans-serif;">Le fichier est une agrégation des données trouvées sur le Code officiel géographique au 1er janvier 2023 (Insee) et sur data.gouv.fr.</span></p>
 <p style="line-height: 100%; margin-bottom: 0cm;"><span style="font-family: Droid Sans, sans-serif;">Liste des colonnes : </span></p>
 
